--- a/locationText.html
+++ b/locationText.html
@@ -12,6 +12,7 @@
   <h1> 1. Projekt iz "Napredni razvoj programske potpore za web" </h1>
   <h2> Author: Dorian Dončević(0036510282) </h2>
   <h3> Fer Username: dd510282 </h3>
+  <h4> Prikaz brojčane vrijednoste trenutne lokacije</h4>
 
   <p>Sve ispod ovog teksta vide samo ulogirani korisnici</p>
 
